Fix gallery visibility and center exported art

--- a/style.css
+++ b/style.css
@@ -70,8 +70,9 @@ td.border {
 
 #output {
     white-space: pre;
-    text-align: left;
-    display: inline-block;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
 }
 
 #gallery-container {
